--- a/HTML_forms/css/style.css
+++ b/HTML_forms/css/style.css
@@ -334,3 +334,27 @@ body {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
 }
+
+@media screen and (max-width: 400px) {
+    .subLogo-img {
+        margin-bottom: 1rem;
+    }
+
+    .accountInscription {
+        width: 100%;
+        border: none;
+    }
+
+    .cForm-input {
+        width: 100%;
+    }
+
+    .subLogo-Box {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .createAccount-btn {
+        padding: 0.5rem 0.2rem 0.5rem 0.2rem;
+    }
+}
