--- a/Positioning_and_floating_elements/css/style.css
+++ b/Positioning_and_floating_elements/css/style.css
@@ -4,6 +4,11 @@ body {
     width: 100%;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 /*=====[[ WIP ]]=====*/
 
 .wipCollapse {
@@ -14,17 +19,102 @@ body {
 
 /*=====[[ TYPOGRAPHY ]]=====*/
 
+.title-xs {
+    font-family: 'Taviraj', serif;
+    font-size: 0.8rem;
+    font-weight: 600;
+    line-height: 1rem;
+}
+
+.title-sm {
+    font-family: 'Taviraj', serif;
+    font-size: 1.3rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+}
+
+.title-xl {
+    font-family: 'Taviraj', serif;
+    font-size: 1.9rem;
+    font-weight: 600;
+    line-height: 2.2rem;
+}
+
+.paragraph-xxs {
+    font-family: 'Taviraj', serif;
+    font-size: 0.8rem;
+    font-weight: 300;
+    line-height: 1rem;
+}
+
+.paragraph-xs {
+    font-family: 'Taviraj', serif;
+    font-size: 0.8rem;
+    font-weight: 400;
+    line-height: 1rem;
+}
+
+.paragraph-sm {
+    font-family: 'Taviraj', serif;
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 1.25rem;
+}
+
+.paragraph-md {
+    font-family: 'Taviraj', serif;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5rem;
+}
+
+.paragraph-lg {
+    font-family: 'Taviraj', serif;
+    font-size: 1rem;
+    font-weight: 800;
+}
+
 /*=====[[ UTILITARY ]]=====*/
 
 .uBox-flex {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
+}
+
+.uBox-flex.column {
+    flex-direction: column;
 }
 
 .uPadding-sm {
     padding-left: 1.4rem;
     padding-right: 1.4rem;
+}
+
+.uMargin-xxs {
+    margin-left: 0.2rem;
+    margin-right: 0.2rem;
+}
+
+.uMargin-top-xxs {
+    margin-top: 0.5rem;
+}
+
+.uMargin-top-sm {
+    margin-top: 1rem;
+}
+
+.uMargin-top-md {
+    margin-top: 3rem;
+}
+
+.uMargin-bottom-sm {
+    margin-bottom: 1rem;
+}
+
+.uMargin-bottom-md {
+    margin-bottom: 3rem;
 }
 
 .uMargin-none {
@@ -38,7 +128,7 @@ body {
     text-transform: uppercase;
     font-size: 0.7rem;
     font-weight: 600;
-    padding: 0.8rem 0.8rem 0.3rem 0.8rem;
+    padding: 0.6rem 0.8rem 0.4rem 0.8rem;
     border: 1px solid #000000;
     border-style: inset;
     border-image: initial;
@@ -58,6 +148,10 @@ body {
     color: #000000;
 }
 
+.cLink-blue {
+    color: #326891;
+}
+
 /*Image responsive --> <"img"> */
 .imgResponsive {
     max-width: 100%;
@@ -71,6 +165,7 @@ body {
     position: fixed;
     width: 100%;
     z-index: 200;
+    top: 0;
 }
 
 .headerContainer {
@@ -93,4 +188,260 @@ body {
 
 .mainLogo {
     width: 12rem;
+}
+
+.headerFixed-margin {
+    margin-top: 3rem;
+}
+
+/*=====[[ PUBLICITY ]]=====*/
+.publicitySection {
+    background-color: #F7F7F7;
+    width: 100%;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.publicityContainer {
+    width: 970px;
+    height: 250px;
+    background-color: #77C38D;
+    padding: 2.5rem;
+}
+
+/*=====[[ MAIN ]]=====*/
+
+.articleSection {
+    display: flex;
+    justify-content: center;
+}
+
+.articleHeader-container {
+   flex-direction: column;
+}
+
+
+.articleTitle-box {
+    width: 600px;
+    font-style: italic;
+}
+
+.articleHeader-link {
+    text-decoration: underline;
+    text-decoration-color: #ccc;
+    color: #000000;
+}
+
+.articleHeader-link:hover {
+    text-decoration: none;
+}
+
+.articleHeader-img {
+    width: 945px;
+    display: flex;
+    flex-direction: column;
+}
+
+.articleHeader-caption {
+    width: 720px;
+}
+
+.textCaption {
+    color: #666;
+}
+
+.autorCaption {
+    color: #888;
+}
+
+.articleHeader-share {
+    width: 600px;
+}
+
+.shareTitle {
+    font-weight: 600;
+}
+
+.headerShare-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.shareDate {
+    font-weight: 200;
+}
+
+.shareBtn-box {
+    align-items: flex-start;
+}
+
+.shareImg {
+    width: 1rem;
+    height: 1rem;
+    padding: 0.4rem;
+    background-color: #eee;
+    border: 0.5px solid transparent;
+    border-radius: 50%;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    cursor: pointer;
+}
+
+.shareImg:hover {
+    background-color: #FFFFFF;
+    border-color: #999;
+}
+
+.shareSave {
+    min-width: 26px;
+    min-height: 14px;
+    cursor: pointer;
+}
+
+.shareComment {
+    border: 1px solid #666;
+    border-radius: 4px;
+    min-width: 26px;
+    min-height: 14px;
+    padding: 6px 4px 0px 4px;
+    text-align: center;
+    cursor: pointer;
+    font-size: 0.7rem;
+    position: relative;
+}
+
+.shareComment::before {
+    border-color: #666 transparent;
+    border-style: solid;
+    bottom: -7px;
+    border-width: 7px 0 0 9px;
+    background-color: transparent;
+    content: "";
+    display: block;
+    left: 15px;
+    position: absolute;
+    width: 0;
+}
+
+.shareComment::after {
+    border-color: #fff transparent;
+    border-style: solid;
+    border-width: 6px 0 0 7px;
+    bottom: -6px;
+    content: "";
+    display: block;
+    left: 16px;
+    position: absolute;
+    width: 0;
+}
+
+/*=====[[ ARTICLE ]]=====*/
+
+.articleContainer {
+    width: 1110px;
+}
+
+.articleContent {
+    margin-left: calc((100% - 600px) / 2);
+    margin-right: 0;
+    width: 600px;
+}
+
+.asideContent {
+    margin-right: 0;
+    margin-left: auto;
+    width: 210px;
+}
+
+.article-paragraph {
+    margin: 0 0 1rem 0;
+}
+
+.title-article {
+    margin: 0.3 0 1.3rem 0;
+    width: 100%;
+}
+
+.doc-article {
+    width: 720px;
+    height: auto;
+    overflow: hidden;
+    position: relative;
+}
+
+.doc-img {
+    max-width: 100%;
+    height: auto;
+}
+
+.doc-text {
+    width: 173px;
+    position: absolute;
+}
+
+.doc-text.dt1,
+.doc-text.dt2,
+.doc-text.dt3,
+.doc-text.dt4 {
+    top: 18.0556%;
+}
+
+.doc-text.dt5,
+.doc-text.dt6,
+.doc-text.dt7,
+.doc-text.dt8 {
+    top: 65.8951%;
+}
+
+.doc-text.dt1,
+.doc-text.dt5 {
+    left: 0.2544%;
+}
+
+.doc-text.dt2,
+.doc-text.dt6 {
+    left: 25.7029%;
+}
+
+.doc-text.dt3,
+.doc-text.dt7 {
+    left: 51.1511%;
+}
+
+.doc-text.dt4,
+.doc-text.dt8 {
+    left: 76.5995%;
+}
+
+.doc-footer {
+    width: 100%;
+}
+
+.doc-autor {
+    font-family: 'Taviraj', serif;
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+.doc-autor::before {
+    width: 60px;
+    content: '';
+    display: block;
+    height: 2px;
+    margin: 0 0 13px;
+    background-color: #000;
+}
+
+.article-videoContainer {
+    width: 600px;
+    height: 319px;
+}
+
+.embeddingVideo {
+    width: 100%;
+    height: 100%;
+}
+
+.articleVideo-caption {
+    margin-left: 0;
 }
