--- a/Positioning_and_floating_elements/css/style.css
+++ b/Positioning_and_floating_elements/css/style.css
@@ -104,6 +104,11 @@ ul {
     grid-column-gap: 1.4rem;
 }
 
+.uPadding-xxs {
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+}
+
 .uPadding-sm {
     padding-left: 1.4rem;
     padding-right: 1.4rem;
@@ -641,7 +646,7 @@ ul {
     margin-bottom: 0.7rem;
 }
 
-.suscribeBorder {
+.suscribeBorder, .mentionsContainer {
     border-top: rgb(226, 226, 226) solid 1px;
 }
 
