--- a/Positioning_and_floating_elements/css/style.css
+++ b/Positioning_and_floating_elements/css/style.css
@@ -646,6 +646,14 @@ ul {
     margin-bottom: 0.7rem;
 }
 
+.suscribeIcon {
+    display: inline-block;
+    height: 13px;
+    width: 13px;
+    margin-right: 7px;
+    vertical-align: middle;
+}
+
 .suscribeBorder, .mentionsContainer {
     border-top: rgb(226, 226, 226) solid 1px;
 }
@@ -663,6 +671,10 @@ ul {
 }
 
 @media screen and (max-width: 1080px) {
+    .articleContent {
+        margin-left: 0;
+    }
+
     .asideContent {
         display: none;
     }
