--- a/Design_teardown/css/style.css
+++ b/Design_teardown/css/style.css
@@ -58,6 +58,18 @@ body {
     margin-top: 0.4rem;
 }
 
+.uMarginTop-md {
+    margin-top: 2rem;
+}
+
+.uMarginTop-xl {
+    margin-top: 10rem;
+}
+
+.uMarginBottom-md {
+    margin-bottom: 2rem;
+}
+
 .uMargin-none {
     margin: 0;
 }
@@ -67,6 +79,11 @@ body {
 .cList-none {
     list-style: none;
 }
+
+.cLink-50:hover {
+    background-color: rgb(110, 86, 101);
+}
+
 /*=====[[ COLORS ]]=====*/
 
 .important-10 {
@@ -231,6 +248,11 @@ body {
     height: ;
 }
 
+.blockText-xxs {
+    width: 2rem;
+    height: 1rem;
+}
+
 .blockText-xs {
     width: 10rem;
     height: 2rem;
@@ -254,6 +276,16 @@ body {
 .blockText-xl {
     width: 30rem;
     height: 6rem;
+}
+
+.blockIcon-xxs {
+    width: 0.4rem;
+    height: 0.4rem;
+}
+
+.blockIcon-sm {
+    width: 1rem;
+    height: 1rem;
 }
 
 /*=====[[ NAVIGATION ]]=====*/
@@ -326,7 +358,24 @@ body {
 }
 
 .lastArticleItem {
-    height: 30rem;
+    height: auto;
+}
+
+.lastArticleImg {
+    width: 4rem;
+    height: 4rem;
+}
+
+.lastArticleItem-body {
+    margin: 10rem 8.3rem;
+}
+
+.lastArticleItem-title h2 {
+    flex-wrap: wrap;
+}
+
+.lastArticleItem-link {
+    align-self: flex-end;
 }
 
 /*=====[[ LASTS POSTS ]]=====*/
@@ -337,6 +386,10 @@ body {
 
 .lastPostItem, .membershipItem, .sponsorItem {
     height: 25rem;
+}
+
+.lasPostItem-header{
+    margin: 5rem 0.6rem;
 }
 
 .latestPostLink {
